--- a/src/index.css
+++ b/src/index.css
@@ -1,68 +1,250 @@
-:root {
-  font-family: system-ui, Avenir, Helvetica, Arial, sans-serif;
-  line-height: 1.5;
-  font-weight: 400;
 
-  color-scheme: light dark;
-  color: rgba(255, 255, 255, 0.87);
-  background-color: #242424;
+@import url('https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,100..900;1,100..900&display=swap');
+@import "tailwindcss";
 
-  font-synthesis: none;
-  text-rendering: optimizeLegibility;
-  -webkit-font-smoothing: antialiased;
-  -moz-osx-font-smoothing: grayscale;
+@theme {
+  --font-display: "Roboto";
 }
 
-a {
-  font-weight: 500;
-  color: #646cff;
-  text-decoration: inherit;
-}
-a:hover {
-  color: #535bf2;
-}
 
 body {
-  margin: 0;
-  display: flex;
-  place-items: center;
-  min-width: 320px;
-  min-height: 100vh;
+  background-color:  #000000;
+  color: rgb(255, 255, 255);
+  font-family: 'Roboto', monospace;
 }
 
-h1 {
-  font-size: 3.2em;
-  line-height: 1.1;
+@layer utilities {
+
+.scrollbar-transicion::-webkit-scrollbar {
+  width: 8px;
+  height: 8px;
 }
 
-button {
-  border-radius: 8px;
-  border: 1px solid transparent;
-  padding: 0.6em 1.2em;
-  font-size: 1em;
-  font-weight: 500;
-  font-family: inherit;
-  background-color: #1a1a1a;
-  cursor: pointer;
-  transition: border-color 0.25s;
-}
-button:hover {
-  border-color: #646cff;
-}
-button:focus,
-button:focus-visible {
-  outline: 4px auto -webkit-focus-ring-color;
+.scrollbar-transicion::-webkit-scrollbar-track {
+  background: transparent;
 }
 
-@media (prefers-color-scheme: light) {
-  :root {
-    color: #213547;
-    background-color: #ffffff;
+.scrollbar-transicion::-webkit-scrollbar-thumb {
+  background-color: #0E1126;
+  border-radius: 4px;
+  transition: background-color 1s linear;
+}
+
+.scrollbar-transicion:hover::-webkit-scrollbar-thumb {
+  background-color: #00e5ff;
+}
+
+/* Scrollbar para la sección de educación */
+.scrollbar-transicionedu::-webkit-scrollbar {
+  width: 8px;
+  height: 8px;
+}
+
+.scrollbar-transicionedu::-webkit-scrollbar-track {
+  background: transparent;
+}
+
+.scrollbar-transicionedu::-webkit-scrollbar-thumb {
+  background-color: #343544;
+  border-radius: 4px;
+  transition: background-color 1s linear;
+  opacity: 0.6;
+}
+
+.scrollbar-transicionedu:hover::-webkit-scrollbar-thumb {
+  background-color: #505050;
+  opacity: 1;
+}
+
+  
+  @keyframes slideUpFadeIn {
+    0% {
+      transform: translateY(10px);
+      opacity: 0;
+    }
+    100% {
+      transform: translateY(0);
+      opacity: 1;
+    }
   }
-  a:hover {
-    color: #747bff;
+
+  @keyframes slideUpFadeOut {
+    0% {
+      transform: translateY(0);
+      opacity: 1;
+    }
+    100% {
+      transform: translateY(10px);
+      opacity: 0;
+    }
   }
-  button {
-    background-color: #f9f9f9;
+
+  .fade-in {
+    animation: slideUpFadeIn 0.5s ease-out forwards;
   }
+
+  .fade-out {
+    animation: slideUpFadeOut 0.5s ease-out forwards;
+  }
+}
+.scroll-fade-up {
+  opacity: 0;
+  transform: translateY(30px);
+  transition: opacity 0.7s ease-out, transform 0.7s ease-out;
+}
+
+.scroll-fade-up.active {
+  opacity: 1;
+  transform: translateY(0);
+}
+.scroll-fade-up {
+  opacity: 0;
+  transform: translateY(30px);
+  transition: opacity 0.7s ease-out, transform 0.7s ease-out;
+}
+
+.scroll-fade-up.active {
+  opacity: 1;
+  transform: translateY(0px);
+}
+
+
+@keyframes appear{
+  from {
+    opacity:0;
+    scale:0.5;
+
+  }  
+  to{
+    opacity:1;
+    scale:1;
+  }
+}
+
+@keyframes disappear{
+  from {
+    opacity:1;
+    scale:1;
+
+  }  
+  to{
+    opacity:0;
+    scale:0.5;
+  }
+}
+@keyframes disappear_header{
+  from {
+    opacity:1;
+    scale:1;
+  
+
+  }  
+  to{
+    opacity:0;
+    scale:0.5;
+  }
+}
+
+
+.anim_block {
+  animation: 
+    appear ease-in-out,
+    disappear ease-in-out;
+  animation-timeline: 
+    view(), 
+    view();
+  animation-range: 
+    entry 0% cover 40%, 
+    exit 20% cover 100%;
+}
+.anim_block_projects {
+  animation: 
+    appear ease-in-out,
+    disappear ease-in-out;
+  animation-timeline: 
+    view(), 
+    view();
+  animation-range: 
+    entry 0% cover 20%, 
+    exit 20% cover 100%;
+}
+.outer_block {
+  animation: 
+    disappear ease-in-out;
+  animation-timeline: 
+
+    view();
+  animation-range: 
+    exit 10% ;
+}
+
+.outer_header {
+  animation: 
+  disappear ease-in-out;
+  animation-timeline: 
+
+    view();
+  animation-range: 
+    exit 0% ;
+}
+
+.bg_opacity_img::before {
+  content: "";
+  position: absolute;
+  inset: 0;
+  background-image: url('https://i.pinimg.com/1200x/d1/77/6a/d1776a6ff3bf2d8cee323cda909c1c6c.jpg');
+  background-size: cover;
+  background-position: center;
+  opacity: 0.3;
+  border-radius: 2rem; /* Ajusta si tu imagen tiene border-radius */
+  z-index: 0;
+}
+
+html {
+  scroll-behavior: smooth;
+}
+
+@keyframes fadeInUp {
+  0% {
+    opacity: 0;
+    transform: translateY(20px);
+  }
+  100% {
+    opacity: 1;
+    transform: translateY(0);
+  }
+}
+
+.fade-in-up {
+  animation: fadeInUp 1s ease-out forwards;
+}
+
+@keyframes fadeInUp {
+  0% {
+    opacity: 0;
+    transform: translateY(20px);
+  }
+  100% {
+    opacity: 1;
+    transform: translateY(0);
+  }
+}
+
+.fade-in-up {
+  animation: fadeInUp 0.8s ease-out forwards;
+}
+
+@keyframes buttonPopup {
+  0% {
+    transform: scale(0);
+    opacity: 0;
+  }
+  100% {
+    transform: scale(1);
+    opacity: 1;
+  }
+}
+
+.button-popup {
+  animation: buttonPopup 0.3s ease-out forwards;
 }
